--- a/docassemble/FeeWaiver/data/questions/fee_waiver.yml
+++ b/docassemble/FeeWaiver/data/questions/fee_waiver.yml
@@ -1235,7 +1235,7 @@ subquestion: |
   
   #### A judge makes the final decision
   This website cannot tell you if ${ you_or_they } qualify for sure. The judge will
-  consider all of the information you provided.
+  consider all of the information you provide.
   
   ${ collapse_template(other_fee_waiver_considerations) }  
 
@@ -1244,7 +1244,7 @@ template: other_fee_waiver_considerations
 subject: |
   **What else the judge will consider**
 content: |  
-  The judge will look at all of the information that you provided on the Fee waiver application
+  The judge will look at all of the information that you provide on the Fee waiver application
   to decide if ${ you_or_they } qualify. For example, the judge will compare ${ your_or_their }
   assets and expenses. They will also read any additional explanation that you
   decide to provide.
@@ -1607,7 +1607,7 @@ subquestion: |
   % if filing_basis != "filing_self":          
   This program can put "**/s/ ${signer[0].name_full()}**" where you would sign your name. The court will accept this as your signature.
   % else:
-  This program can put "**/s/ ${users[0].name.full(middle='full')}**" where you would sign your name. The court will accept this as your signature.
+  This program can put "**/s/ ${users[0].name_full()}**" where you would sign your name. The court will accept this as your signature.
   % endif
 
   If you do not add your **{e-signature}**, you must sign your paper form before you file it.
@@ -1718,6 +1718,10 @@ question: |
 subquestion: |
   After you click **Next**, it may take a few moments to finish making your forms.
   
+  % if trial_court_index == "-1":
+  **Note:** Cook County judges look at Public Benefits and other sections of the Application. It is normal for all sections to be filled in.
+  
+  % endif
   ###### You do not need to refresh your screen. Hang in there!
   
   [NEWLINE]
@@ -1727,7 +1731,7 @@ event: get_docs_screen
 question: |
   Download
 subquestion: |
-  Your forms are ready. View and download your forms below. Click **Make changes** to fix any mistakes.
+  Your forms are ready. View and download your forms below. Click **:edit: Make changes** to fix any mistakes.
 
   This program **does not file** your Fee waiver with the court. You will need to do this yourself. Learn about [**e-filing in Illinois**](https://www.illinoiscourts.gov/eservices/information-for-filers-without-lawyers).
 
@@ -3162,7 +3166,7 @@ review:
     show if: user_expense_other
   - Edit: user_expense_none
     button: |
-      **No expenses**:
+      **No expenses?**:
       ${ word(yesno(user_expense_none)) }
   - Edit: 
       - user_expense_none
